--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="../Project 5.1 Lagoona/css/main-style.css">
+  <link rel="stylesheet" href="css/main-style.css">
   <title>Lagoona сеть отелей</title>
 </head>
 <body class="body">
